--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body>
 
 
-  <nav class="navbar navbar-inverse navbar-fixed-top navbar-shrink">
+  <!-- <nav class="navbar navbar-inverse navbar-fixed-top navbar-shrink">
     <div class="container">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -49,7 +49,7 @@
         </ul>
       </div>
     </div>
-  </nav>
+  </nav> -->
 
 
  <div class="container" style="padding-top: 100px;">
@@ -117,7 +117,7 @@
    <div class="myoffset col-md-offset-1 col-md-9">
    <ul>
     <!-- Update link in Section 5 too -->
-   <li>Latest stable version of FLoRa: <a href="https://github.com/mariuszslabicki/flora/archive/v0.8.tar.gz">FLoRa</a></li>
+   <li>Latest stable version of FLoRa: <a href="https://github.com/mariuszslabicki/flora/releases/download/v1.0.0/flora-1.0.0.tar.gz">FLoRa</a></li>
    <li>Repository with the code: <a href="https://github.com/mariuszslabicki/flora">GitHub</a></li>
    </ul>
   </div>
@@ -132,10 +132,10 @@
    </div>
   <div class="row section-text section-end">
    <div class="myoffset col-md-offset-1 col-md-9">
+    We have verified FLoRa with following dependencies:
    <ul>
-    <li>OMNeT++ 5.2.1</li>
-    <li>INET framework 3.6.3</li>
-    <li>Note: We have checked that FLoRa works also with newer versions (OMNeT++ 5.3, and INET 3.6.4), but we have not verified all functions.</l>
+    <li>OMNeT++ 6 pre 10 (should work also with newer versions)</li>
+    <li>INET framework 4.3.1</li>
     </ul>
   </div>
   </div>
@@ -152,13 +152,12 @@
   <div class="row section-text section-end">
    <div class="myoffset col-md-offset-1 col-md-9">
    <ul>
-   <li>Note: For some reasons, FLoRa does not work on Windows, when compiled with clang. To solve this problem, you can compile the whole environment with gcc. To do that, just set the default compiler to 'gcc' instead of 'clang'. You can do that in a configure.user file located in the main OMNeT++ directory</li>
-   <li>Download <a href="https://omnetpp.org/omnetpp">OMNeT++ 5.2.1</a> and install following the <a href="https://omnetpp.org/documentation">installation guide</a></li>
-   <li>Download <a href="https://inet.omnetpp.org/Download.html">INET 3.6.3</a> framework and install following the <a href="https://inet.omnetpp.org/Installation.html">installation guide</a></li>
-   <li>Download <a href="https://github.com/mariuszslabicki/flora/archive/master.zip">FLoRa</a>, extract the files and import it as a new project into your OMNeT++ workspace (File > Import > General > Existing project into Workspace). HINT: If this is your first experience with OMNeT++ it is convenient to extract the archive into "samples" directory in the main OMNeT++ directory, and change name of this directory to "flora" (instead of "flora-master").</li>
-   <li>Make sure the FLoRa project has INET project as a project reference (Project > Properties > Project References)</li>
+   <li>Download <a href="https://omnetpp.org/omnetpp">OMNeT++ 6</a> and install following the <a href="https://omnetpp.org/documentation">installation guide</a></li>
+   <li>Download <a href="https://inet.omnetpp.org/Download.html">INET 4.3.x</a> framework and install following the <a href="https://inet.omnetpp.org/Installation.html">installation guide</a></li>
+   <li>Download <a href="https://github.com/mariuszslabicki/flora/releases/download/v1.0.0/flora-1.0.0.tar.gz">FLoRa</a>, extract the files and import it as a new project into your OMNeT++ workspace (File > Import > General > Existing project into Workspace). HINT: If this is your first experience with OMNeT++ it is convenient to extract the archive into "samples" directory in the main OMNeT++ directory, and make sure that the directory name is "flora".</li>
+   <li>Make sure the FLoRa project has INET project (inet4.3) as a project reference (Project > Properties > Project References)</li>
    <li>Build the FLoRa project (right-click on the project and select 'Build project')</li>
-   <li>Check if FLoRa is working correctly by running a sample simulation scenario located under 'simulations' directory. Right click on loRaNetworkTest.ini and select Run as > OMNeT++ simulation. If all goes well, the simulation terminates on completion of simulated time</li>
+   <li>Check if FLoRa is working correctly by running a sample simulation scenario located under 'simulations' directory. Right click on omnetpp.ini and select Run as > OMNeT++ simulation. If all goes well, the simulation terminates on completion of simulated time</li>
    </ul>
   </div>
   </div>
@@ -167,14 +166,14 @@
      <!--SECTION 7 -->
    <div class="row section-heading" id="example">
    <div class="col-md-offset-1 col-md-9">
-   <b>Sample scenario</b>
+   <b>Sample scenarios</b>
    </div>
    </div>
   <div class="row section-text section-end">
    <div class="myoffset col-md-offset-1 col-md-9">
-   A sample scenario is present in the simulations directory of FLoRa. The scenario is defined in the loRaNetworkTest.ini file
+   A sample scenarios are present in the simulations directory of FLoRa. The basic scenario is defined in the omnetpp.ini file
  </p>
-   The sample scenario has the following features:
+   The simplest scenario has the following features:
    <ul>
    <li>A network of 10 nodes, one gateway and a network server</li>
    <li>The nodes are placed uniformly randomly distributed in a square deployment area</li>
@@ -187,6 +186,8 @@
    </ul>
   </p>
   The simulation statistics files are generated in simulations/results directory on completion of the run. The simulation statistics can be viewed through the OMNeT++ GUI.
+  </p>
+  If you want to evaluate more scenarios you can run/check script run_example_networks.sh
   </div>
   </div>
   <!-- END SECTION 7 -->
@@ -199,7 +200,14 @@
    </div>
   <div class="row section-text section-end">
    <div class="myoffset col-md-offset-1 col-md-9">
-     <p>
+    <p>
+      1.0.0
+      <ul>
+      <li>Huge update</li>
+      <li>Now it works with OMNeT++ 6 and INET 4.3.1</li>
+      </ul>
+    </p>
+    <p>
        0.8
        <ul>
        <li>Update default parameters with LoRaWAN values</li>
@@ -231,7 +239,20 @@
   </div>
   <!-- END SECTION 8 -->
 
-   <!--SECTION 9 -->
+<!--SECTION 9 -->
+<div class="row section-heading" id="example">
+  <div class="col-md-offset-1 col-md-9">
+  <b>Final note</b>
+  </div>
+  </div>
+  <div class="row section-text section-end">
+  <div class="myoffset col-md-offset-1 col-md-9">
+  This is a piece of software which is developed mostly during late evenings. Feel free to use it as long as you follow licenses. If you want to say thank you please check <a href="https://www.buymeacoffee.com/mariuszslabicki">here</a>.
+  </div>
+  </div>
+  <!-- END SECTION 9 -->
+
+   <!--SECTION 10 -->
    <div class="row section-heading" id="authors">
    <div class="col-md-offset-1 col-md-9">
    <b>Authors</b>
@@ -241,14 +262,11 @@
    <div class="myoffset col-md-offset-1 col-md-9">
     <ul>
     <li><a href="https://mariuszslabicki.github.io">Mariusz Slabicki</a></li>
-    <li><a href="https://users.aalto.fi/~premsag1/">Gopika Premsankar</a></li>
+    <li><a href="https://gpremsan.github.io/">Gopika Premsankar</a></li>
     </ul>
   </div>
   </div>
-<!-- END SECTION 9 -->
-
-
-
+<!-- END SECTION 10 -->
 
  </div>
 
