--- a/index.html
+++ b/index.html
@@ -175,9 +175,8 @@
  </p>
    The simplest scenario has the following features:
    <ul>
-   <li>A network of 10 nodes, one gateway and a network server</li>
-   <li>The nodes are placed uniformly randomly distributed in a square deployment area</li>
-   <li>Each node sends a packet after a time drawn from an exponential distribution with a mean of 100s</li>
+   <li>A network with 1 node, one gateway and a network server</li>
+   <li>The node sends a packet after a time drawn from an exponential distribution with a mean of 100s</li>
    <li>Spreading factor and transmission power for each node are chosen randomly (uniform) from available settings</li>
    <li>ADR is disabled on both the network server and nodes</li>
    <li>Simulation time limit is configured for 7 days with a warm-up period of 1 day</li>
